Added support in backend for animes
Removed Legacy files
