# anime_list_manager_backend/app.js
@@ -1,47 +1,0 @@
-var createError = require("http-errors");
-var express = require("express");
-var path = require("path");
-var cookieParser = require("cookie-parser");
-var logger = require("morgan");
-var cors = require("cors");
-var swaggerUi = require("swagger-ui-express");
-var swaggerDocument = require("./swagger.json");
-
-var animesRouter = require("./routes/animes");
-
-var mongoose = require("mongoose");
-mongoose.Promise = global.Promise;
-mongoose
-  .connect("mongodb://localhost:27017/anime_list")
-  .then(() => console.log("connection successful"))
-  .catch((err) => console.error(err));
-
-var app = express();
-
-app.use(cors());
-app.use(logger("dev"));
-app.use(express.json());
-app.use(express.urlencoded({ extended: false }));
-app.use(cookieParser());
-app.use(express.static(path.join(__dirname, "public")));
-
-app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
-app.use("/api/v1", animesRouter);
-
-// catch 404 and forward to error handler
-app.use(function (req, res, next) {
-  next(createError(404));
-});
-
-// error handler
-app.use(function (err, req, res, next) {
-  // set locals, only providing error in development
-  res.locals.message = err.message;
-  res.locals.error = req.app.get("env") === "development" ? err : {};
-
-  // render the error page
-  res.status(err.status || 500);
-  res.render("error");
-});
-
-module.exports = app;
